toolchain: a better fix for weird loaders issues
When ld.so.cache is missing, the glibc linux loader uses hardcoded
libraries search paths. For some toolchains, these hardcoded search paths
do not contain /lib /usr/lib. Known to have this issue:
- the Linaro armhf toolchain
- the Fedora x86_64 toolchain
- maybe the crosstool-ng generated ppc64 toolchain

Since we put the glibc libraries in /lib, this is a problem, so, to avoid
this situation generate /etc/ld.so.cache on the host.

Unfortunately, this is not enough, as the loader seems to look for libc.so.6
in the hardcoded path anyway, so workaround this by putting libc.so.6 in
/etc/ld.so.preload.

--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -83,16 +83,6 @@ bins:
 
 libs:
 	mkdir -p "$(pkginst)/lib" "$(pkginst)/usr/lib"
-ifeq ($(MKR_ARM_FLOAT_VFP),y)
-	for d in $(LIBDIRS); do \
-		case "$$d" in \
-			*usr/lib*);; \
-			*lib/arm-linux-gnueabihf*) \
-				dest=lib/arm-linux-gnueabihf; \
-				mkdir -p "$(pkginst)/$$dest";; \
-		esac; \
-	done
-endif
 	loaderbase=$(shell basename $(LOADER)); \
 	loaderdir=$(shell dirname $(LOADER)); \
 	mkdir -p "$(pkginst)$$loaderdir"; \
@@ -100,9 +90,6 @@ endif
 		for d in $(LIBDIRS); do \
 			case "$$d" in \
 			*usr/lib*) dest=usr/lib;; \
-			*lib/arm-linux-gnueabihf*) \
-				dest=lib/arm-linux-gnueabihf;; \
-			*lib64*) dest=lib64;; \
 			*) dest=lib;; \
 			esac; \
 			case "$$l" in \
@@ -114,6 +101,10 @@ endif
 			esac; \
 			set -- "$$file"; \
 			[ -e $$1 ] || continue; \
+			if [ "$$l" = "libc.so" ]; then \
+				mkdir -p $(pkginst)/etc; \
+				echo "/$$dest/`basename $$1`" > $(pkginst)/etc/ld.so.preload; \
+			fi; \
 			cp --preserve=mode,timestamps $$1 "$(pkginst)/$$dest"; \
 			break; \
 		done; \
