rootfs: fix file permission issues when enabling stripping
This is another instance of a fakeroot shortcoming. Workaround
like staging: use fakeroot-filter for each stage, staging and rootfs

--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -232,9 +232,13 @@ strip:
 		g="$(rootfs)/$$f"; \
 		case "$$f" in \
 		dev/*|*.o|*.a)continue;; \
-		*)if [ ! -f $$g -o ! $$g -nt .mkr.stripped ]; then \
+		*)if [ ! -f $$g ]; then \
 			continue; \
-		  fi;; \
+		  fi; \
+		if [ -e .mkr.stripped -a ! $$g -nt .mkr.stripped ]; then \
+			echo  $$g not new!; \
+			continue; \
+		fi;; \
 		esac; \
 		echo Stripping "$$f"; \
 		case "$$f" in \
