dosfstools: fix compilation in x86_32 mode

--- a/dosfstools/Makefile
+++ b/dosfstools/Makefile
@@ -1,4 +1,5 @@
-compile-make-args-y += PREFIX=/usr CC="$(CC)"
+compile-make-args-y += \
+	PREFIX=/usr CC="$(CC)" CFLAGS="$(cflags-y)" LDFLAGS="$(ldflags-y)"
 
 staging-make-args-y += PREFIX=/usr
 
