--- a/Kconfig
+++ b/Kconfig
@@ -8,6 +8,7 @@ source "ncurses/Kconfig"
 source "util-linux/Kconfig"
 source "xz/Kconfig"
 source "zlib/Kconfig"
+source "libtirpc/Kconfig"
 
 endmenu
 
@@ -49,6 +50,7 @@ source "ntfs-3g/Kconfig"
 source "parted/Kconfig"
 source "strace/Kconfig"
 source "tcpdump/Kconfig"
+source "rpcbind/Kconfig"
 source "valgrind/Kconfig"
 
 endmenu
