--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -120,6 +120,7 @@ configure32-args-y = \
 configure-env-y = \
 	PKG_CONFIG_DIR="" \
 	PKG_CONFIG_LIBDIR=$(staging)/usr/lib/pkgconfig:$(staging)/usr/share/pkgconfig \
+	PKG_CONFIG_PATH=$(staging)/usr/lib/pkgconfig:$(staging)/usr/share/pkgconfig \
 	PKG_CONFIG_SYSROOT_DIR=$(staging) \
 	PKG_CONFIG_ALLOW_SYSTEM_LIBS=y \
 	PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=y
@@ -127,6 +128,7 @@ configure-env-y = \
 configure32-env-y = \
 	PKG_CONFIG_DIR="" \
 	PKG_CONFIG_LIBDIR=$(staging)/usr/lib32/pkgconfig:$(staging)/usr/share/pkgconfig \
+	PKG_CONFIG_PATH=$(staging)/usr/lib32/pkgconfig:$(staging)/usr/share/pkgconfig \
 	PKG_CONFIG_SYSROOT_DIR=$(staging) \
 	PKG_CONFIG_ALLOW_SYSTEM_LIBS=y \
 	PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=y
