libtirpc: install netconfig in /etc

--- a/libtirpc/Makefile
+++ b/libtirpc/Makefile
@@ -1,12 +1,10 @@
-configure-args-y += --disable-gssapi --disable-ipv6
-
-configure-env-y := \
-	prefix=/usr \
-	CC="$(CC)" \
-	CFLAGS="$(cflags-y)" \
-	LDFLAGS="$(ldflags-y)"
+configure-args-y += \
+	--disable-gssapi \
+	--disable-ipv6 \
+	--sysconfdir=/etc
 
 rootfs-y := \
+	/etc/netconfig \
 	/usr/lib/libtirpc.so.*
 
 compile: default-autotools-compile
