rpcbind: provide a rpcuser to avoid failure due to empty rpcuser

--- a/rpcbind/Makefile
+++ b/rpcbind/Makefile
@@ -1,7 +1,9 @@
-configure-env-y += prefix=/
+configure-args-y := \
+	--with-rpcuser=daemon
 
 rootfs-y += \
-	/sbin/rpcbind
+	/usr/bin/rpcbind \
+	/usr/bin/rpcinfo
 
 compile: default-autotools-compile
 
