ltp: disable libacl

--- a/ltp/Makefile
+++ b/ltp/Makefile
@@ -1,5 +1,6 @@
 configure-args-y += --prefix=/ltp \
-	ac_cv_header_openssl_sha_h=no
+	ac_cv_header_openssl_sha_h=no \
+	ac_cv_header_sys_acl_h=no
 
 compile-make-args-y += \
 	-f $(srcdir)/Makefile \
