dropbear: avoid having to change dropbear configure.ac

--- a/dropbear/Makefile
+++ b/dropbear/Makefile
@@ -1,4 +1,4 @@
-configure-args-y += --disable-bundled-libtom
+configure-args-y += --disable-bundled-libtom LIBS="-ltommath"
 
 configure-args-$(MKR_DROPBEAR_ZLIB) += --enable-zlib
 configure-args-$(call not, $(MKR_DROPBEAR_ZLIB)) += --disable-zlib
