bash: fix compilation with external libreadline

--- a/bash/Makefile
+++ b/bash/Makefile
@@ -1,9 +1,10 @@
 configure-args-y += \
+	ac_cv_rl_version=5.0 \
 	--bindir=/bin \
 	--disable-nls \
 	--enable-readline \
 	--with-curses \
-	--with-installed-readline
+	--with-installed-readline=$(staging)/usr
 
 rootfs-y += \
 	/bin/bash \
