--- a/Kconfig
+++ b/Kconfig
@@ -50,6 +50,7 @@ source "dosfstools/Kconfig"
 source "e2fsprogs/Kconfig"
 source "file/Kconfig"
 source "gdb/Kconfig"
+source "iperf/Kconfig"
 source "kexec-tools/Kconfig"
 source "make/Kconfig"
 source "mdadm/Kconfig"
