zlib-ng: modify srcdir symbol name
in order to avoid Kconfig recycling the old incorrect value

--- a/zlib-ng/Kconfig
+++ b/zlib-ng/Kconfig
@@ -1,11 +1,11 @@
-menu "zlib"
+menu "zlib-ng"
 
 config ZLIB
 	package "Zlib compression library"
 
 if ZLIB
 
-config ZLIB_SRCDIR
+config ZLIB_NG_SRCDIR
        srcdir "Source directory"
        default "zlib-ng*"
 
